# LegalDrift

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
demo/: app.py
docs/: architecture.md  faq.md
notebooks/: tutorial.ipynb
src/data/sample/: contract_v1.txt  contract_v2.txt
src/legaldrift/: __init__.py  cli.py
src/legaldrift/core/: __init__.py  baselines.py  chunker.py  concepts.py  detector.py  document.py  embedding.py  history.py
tests/: test_baselines.py  test_chunker.py  test_cli.py  test_concepts.py  test_detector.py  test_document.py  test_embedding.py  test_history.py  test_imports.py
