[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legaldrift"
version = "0.1.0"
description = "Legal Document Drift Detection System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=3.0.0", "black>=22.0.0"]
demo = ["streamlit>=1.0.0"]

[project.scripts]
legaldrift = "legaldrift.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["legaldrift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src/legaldrift"]

[tool.black]
line-length = 100
target-version = ['py38']
