[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legaldrift"
version = "0.1.0"
description = "Statistical monitoring for legal document revision — detect semantic drift in contracts and policies"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "OsamaMoftah"}
]
keywords = [
    "legal",
    "contracts",
    "nlp",
    "drift-detection",
    "compliance",
    "legal-tech",
    "bert",
    "statistical-testing",
    "document-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=3.0.0", "black>=22.0.0"]
demo = ["streamlit>=1.0.0"]

[project.scripts]
legaldrift = "legaldrift.cli:main"

[project.urls]
Homepage = "https://github.com/OsamaMoftah/LegalDrift"
Documentation = "https://github.com/OsamaMoftah/LegalDrift/blob/main/README.md"
Repository = "https://github.com/OsamaMoftah/LegalDrift.git"
Issues = "https://github.com/OsamaMoftah/LegalDrift/issues"
Changelog = "https://github.com/OsamaMoftah/LegalDrift/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["legaldrift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src/legaldrift"]

[tool.black]
line-length = 100
target-version = ['py38']
